# EnvrSciOps

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
src/envrsciops/: cli.py  config.py  db.py
src/envrsciops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/envrsciops/pipelines/: usgs_streamflow.py
